--- a/InfantryOnline.Tools/Tools.InfantryStudio/Tools.InfantryStudio.csproj
+++ b/InfantryOnline.Tools/Tools.InfantryStudio/Tools.InfantryStudio.csproj
@@ -128,16 +128,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tools.External\Gibbed.Infantry\Gibbed.Infantry.FileFormats\Gibbed.Infantry.FileFormats.csproj">
-      <Project>{c2e5d029-0766-4d2e-a559-cb74a800d204}</Project>
-      <Name>Gibbed.Infantry.FileFormats</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Tools.External\Gibbed.Infantry\Gibbed.IO\Gibbed.IO.csproj">
-      <Project>{047857ba-daa3-4ca7-afb8-a1b082b28c6a}</Project>
-      <Name>Gibbed.IO</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Rendering\Shaders\RenderTileToTexture.hlsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -145,7 +135,16 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Tools.External\Gibbed\Gibbed.Infantry.FileFormats\Gibbed.Infantry.FileFormats.csproj">
+      <Project>{c2e5d029-0766-4d2e-a559-cb74a800d204}</Project>
+      <Name>Gibbed.Infantry.FileFormats</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tools.External\Gibbed\Gibbed.IO\Gibbed.IO.csproj">
+      <Project>{047857ba-daa3-4ca7-afb8-a1b082b28c6a}</Project>
+      <Name>Gibbed.IO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
